--- a/carp-modules/carp-module-http-sync/pom.xml
+++ b/carp-modules/carp-module-http-sync/pom.xml
@@ -22,26 +22,16 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.sliew</groupId>
-        <artifactId>carp</artifactId>
+        <artifactId>carp-modules</artifactId>
         <version>0.0.13-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-modules</artifactId>
+    <artifactId>carp-module-http-sync</artifactId>
     <packaging>pom</packaging>
 
     <modules>
-        <module>carp-module-alert</module>
-        <module>carp-module-application</module>
-        <module>carp-module-datasource</module>
-        <module>carp-module-export</module>
-        <module>carp-module-http-sync</module>
-        <module>carp-module-kubernetes</module>
-        <module>carp-module-persistence</module>
-        <module>carp-module-plugin</module>
-        <module>carp-module-queue</module>
-        <module>carp-module-resource</module>
-        <module>carp-module-scheduler</module>
-        <module>carp-module-security</module>
-        <module>carp-module-system</module>
-        <module>carp-module-workflow</module>
+        <module>carp-module-http-framework</module>
+        <module>carp-module-http-remote</module>
     </modules>
+
 </project>
