feature: add carp-dependencies module

--- a/carp-dependencies/pom.xml
+++ b/carp-dependencies/pom.xml
@@ -20,14 +20,54 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>cn.sliew</groupId>
-        <artifactId>carp</artifactId>
-        <version>0.0.13-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
+    <groupId>cn.sliew</groupId>
     <artifactId>carp-dependencies</artifactId>
+    <version>0.0.13-SNAPSHOT</version>
     <packaging>pom</packaging>
+
+    <name>carp-dependencies</name>
+    <description>Carp Dependencies</description>
+    <url>https://github.com/flowerfine/carp</url>
+
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>git@github.com:flowerfine/carp.git</connection>
+        <developerConnection>scm:git:git@github.com:flowerfine/carp.git</developerConnection>
+        <url>https://github.com/flowerfine/carp</url>
+        <tag>HEAD</tag>
+    </scm>
+
+    <developers>
+        <developer>
+            <name>kalencaya</name>
+            <email>1942460489@qq.com</email>
+        </developer>
+    </developers>
+
+    <issueManagement>
+        <system>Github Issue</system>
+        <url>https://github.com/flowerfine/carp/issues</url>
+    </issueManagement>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>sonatype-nexus</id>
+            <name>Sonatype Nexus Snapshots</name>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>sonatype-nexus</id>
+            <name>Sonatype Nexus Release</name>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
     <properties>
         <spring.cloud.version>2023.0.1</spring.cloud.version>
@@ -104,142 +144,142 @@
             </dependency>
 
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-framework-common</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-framework-dag</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-framework-exception</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-framework-metrics</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-framework-mongo</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-framework-mybatis</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-framework-pekko</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-framework-redis</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-framework-spring</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-framework-web</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-alert</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-application-vela</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-datasource</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-http-framework</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-kubernetes</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-plugin</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-scheduler-base</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-scheduler-quartz</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-queue-api</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-security-core</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-security-spring</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-system</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-workflow-api</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-workflow-internal</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-plugin-schedule-api</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-plugin-test-api</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-server</artifactId>
-                <version>${project.parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
 
             <dependency>
@@ -555,5 +595,98 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.7.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>sonatype-nexus</serverId>
+                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <profiles>
+        <profile>
+            <id>oss-release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <charset>${project.build.sourceEncoding}</charset>
+                            <encoding>${project.build.sourceEncoding}</encoding>
+                            <docencoding>${project.build.sourceEncoding}</docencoding>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <!-- Prevent `gpg` from using pinentry programs -->
+                            <gpgArguments>
+                                <arg>--pinentry-mode</arg>
+                                <arg>loopback</arg>
+                            </gpgArguments>
+                        </configuration>
+                    </plugin>
+                    <!-- We want to package up license resources in the JARs produced -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-remote-resources-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>process-resource-bundles</id>
+                                <goals>
+                                    <goal>process</goal>
+                                </goals>
+                                <configuration>
+                                    <resourceBundles>
+                                        <resourceBundle>org.apache:apache-jar-resource-bundle:1.4</resourceBundle>
+                                    </resourceBundles>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
