--- a/carp-modules/pom.xml
+++ b/carp-modules/pom.xml
@@ -32,7 +32,7 @@
         <module>carp-module-alert</module>
         <module>carp-module-application</module>
         <module>carp-module-datasource</module>
-        <module>carp-module-export</module>
+        <module>carp-module-excel</module>
         <module>carp-module-http-sync</module>
         <module>carp-module-kubernetes</module>
         <module>carp-module-persistence</module>
