feature: update bkdevops schedule module

--- a/carp-examples/carp-bkdevops-example/carp-bkdevops-server-example/src/main/resources/bootstrap.yaml
+++ b/carp-examples/carp-bkdevops-example/carp-bkdevops-server-example/src/main/resources/bootstrap.yaml
@@ -1,13 +1,13 @@
 server.port: 8082
 spring:
   application.name: schedule-server-sample
-  data:
-    mongodb:
-      host: localhost
-      port: 27017
-      database: schedule_local
-      username: root
-      password: example
+#  data:
+#    mongodb:
+#      host: localhost
+#      port: 27017
+#      database: schedule_local
+#      username: root
+#      password: example
 logging.level:
   com.tencent: debug
 
@@ -18,3 +18,5 @@ devops.schedule:
       access-token: xxx
       username: admin
       password: password
+    enabled: true
+    ui.enabled: true
