--- a/carp-modules/carp-module-http-sync/carp-module-http-remote/pom.xml
+++ b/carp-modules/carp-module-http-sync/carp-module-http-remote/pom.xml
@@ -27,5 +27,11 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>carp-module-http-remote</artifactId>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>carp-module-http-remote-feign</module>
+        <module>carp-module-http-remote-jst</module>
+    </modules>
 
 </project>
