--- a/carp-modules/carp-module-http-sync/carp-module-http-remote/carp-module-http-remote-jst/pom.xml
+++ b/carp-modules/carp-module-http-sync/carp-module-http-remote/carp-module-http-remote-jst/pom.xml
@@ -22,25 +22,26 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.sliew</groupId>
-        <artifactId>carp-module-http-sync</artifactId>
+        <artifactId>carp-module-http-remote</artifactId>
         <version>0.0.13-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-module-http-job</artifactId>
+    <artifactId>carp-module-http-remote-jst</artifactId>
+
+    <properties>
+        <jst.version>0.0.1</jst.version>
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
-            <artifactId>carp-module-http-framework</artifactId>
+            <artifactId>carp-module-http-remote-feign</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>carp-module-http-remote-feign</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>carp-module-http-remote-jst</artifactId>
+            <groupId>com.jushuitan</groupId>
+            <artifactId>java-client</artifactId>
+            <version>${jst.version}</version>
         </dependency>
     </dependencies>
 </project>
