--- a/carp-modules/carp-module-http-sync/carp-module-http-job/pom.xml
+++ b/carp-modules/carp-module-http-sync/carp-module-http-job/pom.xml
@@ -31,6 +31,11 @@
     <dependencies>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-framework-exception</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>carp-module-http-framework</artifactId>
         </dependency>
 
