--- a/carp-framework/carp-framework-common/pom.xml
+++ b/carp-framework/carp-framework-common/pom.xml
@@ -73,6 +73,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>cn.sliew</groupId>
             <artifactId>milky-common</artifactId>
         </dependency>
