feature: update http sync jst job

--- a/carp-modules/carp-module-http-sync/carp-module-http-job/pom.xml
+++ b/carp-modules/carp-module-http-sync/carp-module-http-job/pom.xml
@@ -36,6 +36,11 @@
 
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-framework-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>carp-module-http-framework</artifactId>
         </dependency>
 
