--- a/carp-server/src/main/resources/application-dev.yml
+++ b/carp-server/src/main/resources/application-dev.yml
@@ -36,7 +36,7 @@ spring:
       maximum-pool-size: 5
       auto-commit: true
       idle-timeout: 600000
-      pool-name: carp
+      pool-name: data-service
       max-lifetime: 900000
       connection-timeout: 10000
       connection-test-query: SELECT 1
