--- a/carp-support/carp-annotation-processor/pom.xml
+++ b/carp-support/carp-annotation-processor/pom.xml
@@ -22,16 +22,21 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.sliew</groupId>
-        <artifactId>carp</artifactId>
+        <artifactId>carp-support</artifactId>
         <version>0.0.13-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-support</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>carp-annotation-processor</artifactId>
 
-    <modules>
-        <module>carp-annotation-processor</module>
-        <module>carp-generator</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.auto.service</groupId>
+            <artifactId>auto-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.palantir.javapoet</groupId>
+            <artifactId>javapoet</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
