--- a/carp-modules/carp-module-application/carp-module-application-controller/pom.xml
+++ b/carp-modules/carp-module-application/carp-module-application-controller/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>cn.sliew</groupId>
         <artifactId>carp-module-application</artifactId>
-        <version>0.0.13-SNAPSHOT</version>
+        <version>0.0.13</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>carp-module-application-controller</artifactId>
