--- a/carp-plugins/carp-plugin-schedule/pom.xml
+++ b/carp-plugins/carp-plugin-schedule/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>cn.sliew</groupId>
         <artifactId>carp-plugins</artifactId>
-        <version>0.0.13-SNAPSHOT</version>
+        <version>0.0.13</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>carp-plugin-schedule</artifactId>
