--- a/carp-support/carp-annotation-processor/pom.xml
+++ b/carp-support/carp-annotation-processor/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>cn.sliew</groupId>
         <artifactId>carp-support</artifactId>
-        <version>0.0.13-SNAPSHOT</version>
+        <version>0.0.13</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>carp-annotation-processor</artifactId>
