--- a/pom.xml
+++ b/pom.xml
@@ -265,6 +265,11 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>carp-module-scheduler-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-scheduler-manage</artifactId>
                 <version>${project.version}</version>
             </dependency>
