--- a/carp-modules/carp-module-scheduler/carp-module-scheduler-manage/pom.xml
+++ b/carp-modules/carp-module-scheduler/carp-module-scheduler-manage/pom.xml
@@ -37,6 +37,11 @@
             <groupId>${project.parent.groupId}</groupId>
             <artifactId>carp-framework-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-module-scheduler-api</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
