--- a/carp-framework/carp-framework-redis/pom.xml
+++ b/carp-framework/carp-framework-redis/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>cn.sliew</groupId>
         <artifactId>carp-framework</artifactId>
-        <version>0.0.14-SNAPSHOT</version>
+        <version>0.0.14</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>carp-framework-redis</artifactId>
